# sirrd

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.release  README.md  docker-compose.yml  llms.txt
.github/workflows/: ci.yml  release.yml
Formula/: sirr.rb
crates/sirr/: Cargo.toml
crates/sirr-server/: Cargo.toml
crates/sirr-server/src/: auth.rs  handlers.rs  heartbeat.rs  lib.rs  license.rs  server.rs  validator.rs  webhooks.rs
crates/sirr-server/src/store/: api_keys.rs  audit.rs  crypto.rs  db.rs  mod.rs  model.rs
crates/sirr/src/: main.rs
crates/sirrd/: Cargo.toml
