[workspace]
members = [
    "crates/sirr",
    "crates/sirr-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sirr Contributors"]
license = "BSL-1.1"
repository = "https://github.com/yourorg/sirr"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
